# full-stack-react-note-taking-app

./: README.md
backend/: README.md  notes.db  pyproject.toml
backend/fastapi_backend/: main.py  sqldb.py
frontend/cliqs-react-app/: .env  README.md  package-lock.json  package.json  vite.config.js
frontend/cliqs-react-app/src/: App.jsx  index.css
frontend/cliqs-react-app/src/components/: AddNote.jsx  EditNote.jsx  FetchNotes.jsx  Footer.jsx
frontend/cliqs-react-app/src/config/: api_config.js
