[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for React Note Taking app"
authors = ["Name Surname name.surname@name.com"]
readme = "README.md"
packages = [{include = "fastapi_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"
black = "^24.10.0"
flake8 = "^7.1.1"
